<resources>
    <string name="app_name">Eventure</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="skip">Skip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="timeline">Timeline</string>
    <string name="new_event">New Event</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="app_logo_with_description">app logo with description</string>
    <string name="profile_image_here">profile image here</string>
    <string name="no_name">No Name</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign out</string>
    <string name="description">Description</string>
    <string name="event_poster_to_upload">event poster to upload</string>
    <string name="post">POST</string>
    <string name="cancel_button_textview">cancel button textview</string>
    <string name="search">Search</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name_of_user">Name of user</string>
    <string name="name">Name</string>
    <string name="email_address_of_user">Email address of user</string>
    <string name="no_email_available">No email available</string>
    <string name="bio">Bio</string>
    <string name="tell_us_something_about_you">Tell us something about you...</string>
    <string name="save_details">Save details</string>
</resources>